--- a/style.css
+++ b/style.css
@@ -1,20 +1,37 @@
 .list {
   list-style: none;
+  max-height: 130px;
+  overflow: hidden;
+}
+
+.expanded {
+  overflow: visible;
+  max-height: none;
 }
 
 .list__item {
   color: white;
   background-color: blue;
-  width: 20px;
+  width: 40px;
   text-align: center;
   padding: 10px;
   margin: 5px;
   border: solid 1px blue;
   border-radius: 50%;
+  box-sizing: border-box;
 }
 
-.active {
+.list__item:first-of-type {
+  margin-top: 0;
+}
+
+.list__item:last-of-type {
+  margin-bottom: 0;
+}
+
+.expand {
   background-color: red;
+  margin-bottom: 0;
 }
 
 .hidden {
