--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   width: 40px;
   text-align: center;
   padding: 10px;
-  margin: 5px;
+  margin: 10px 0 30px 0;
   border: solid 1px blue;
   border-radius: 50%;
   box-sizing: border-box;
@@ -36,4 +36,13 @@
 
 .hidden {
   display: none;
+}
+
+.container {
+  display: flex;
+}
+
+.list:first-child {
+  display: flex;
+  flex-direction: column;
 }
